added old climber and old spinner, superstructure routines not working yet