@@ -1,15 +1,21 @@
 package com.palyrobotics.frc2020.config.constants;
 
-import java.util.Arrays;
 import java.util.List;
+
+import com.revrobotics.ColorMatch;
 
 import edu.wpi.first.wpilibj.util.Color;
 
 public class SpinnerConstants {
 
-	public static final Color kBlueTarget = new Color(0.143, 0.427, 0.429);
-	public static final Color kGreenTarget = new Color(0.197, 0.561, 0.240);
-	public static final Color kRedTarget = new Color(0.561, 0.232, 0.114);
-	public static final Color kYellowTarget = new Color(0.361, 0.524, 0.113);
-	public static final List<String> colorOrder = Arrays.asList("Y", "R", "G", "B");
+	// May need to be re-tuned based on lighting conditions
+	public static final Color kCyanCPTarget = ColorMatch.makeColor(0.2, 0.5, 0.4),
+			kGreenCPTarget = ColorMatch.makeColor(0.213, 0.537, 0.249), kRedCPTarget = ColorMatch.makeColor(0.396, 0.415, 0.19),
+			kYellowCPTarget = ColorMatch.makeColor(0.312, 0.537, 0.151);
+	// scale ratio to allow for control panel 1/eighth rotation
+	public static final double kEighthCPMovementGearRatio = 1.5;
+	public static final List<String> kControlPanelColorOrder = List.of("Y", "R", "G", "C");
+
+	private SpinnerConstants() {
+	}
 }
